Sample: runtime parameter for endorsed dir added